// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ColorPicker ui with selected value 1`] = `
<FormGroup
  className="color-picker"
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <div
    className="d-flex"
  >
    <div
      className="d-flex justify-content-between"
    >
      <div
        className="border p-1"
      >
        <div
          className="h-100"
          id="color-picker-value"
          style={
            Object {
              "backgroundColor": "#cdcdcd",
              "width": 42,
            }
          }
        />
      </div>
      <u
        className="align-self-center mx-3 clickable font-weight-lighter"
        onClick={[Function]}
        role="button"
      >
        Clear
      </u>
    </div>
    <Popover
      isOpen={false}
      placement="bottom"
      target={
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Select your best friend
        </Button>
      }
    >
      <Card
        body={true}
        className="p-0"
        tag="div"
      >
        <ColorPicker
          color="#cdcdcd"
          disableAlpha={false}
          onChange={[Function]}
          presetColors={
            Array [
              "#D0021B",
              "#F5A623",
              "#F8E71C",
              "#8B572A",
              "#7ED321",
              "#417505",
              "#BD10E0",
              "#9013FE",
              "#4A90E2",
              "#50E3C2",
              "#B8E986",
              "#000000",
              "#4A4A4A",
              "#9B9B9B",
              "#FFFFFF",
            ]
          }
          styles={Object {}}
          width={200}
        />
        <div
          className="d-flex justify-content-between my-1 p-1"
        >
          <Button
            color="secondary"
            onClick={[Function]}
            tag="button"
          >
            Cancel
          </Button>
          <Button
            color="primary"
            onClick={[Function]}
            tag="button"
          >
            Select
          </Button>
        </div>
      </Card>
    </Popover>
  </div>
  Some error
</FormGroup>
`;

exports[`Component: ColorPicker ui without selected value 1`] = `
<FormGroup
  className="color-picker"
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <div
    className="d-flex"
  >
    <Popover
      isOpen={false}
      placement="bottom"
      target={
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Select your best friend
        </Button>
      }
    >
      <Card
        body={true}
        className="p-0"
        tag="div"
      >
        <ColorPicker
          color="#ffffff"
          disableAlpha={false}
          onChange={[Function]}
          presetColors={
            Array [
              "#D0021B",
              "#F5A623",
              "#F8E71C",
              "#8B572A",
              "#7ED321",
              "#417505",
              "#BD10E0",
              "#9013FE",
              "#4A90E2",
              "#50E3C2",
              "#B8E986",
              "#000000",
              "#4A4A4A",
              "#9B9B9B",
              "#FFFFFF",
            ]
          }
          styles={Object {}}
          width={200}
        />
        <div
          className="d-flex justify-content-between my-1 p-1"
        >
          <Button
            color="secondary"
            onClick={[Function]}
            tag="button"
          >
            Cancel
          </Button>
          <Button
            color="primary"
            onClick={[Function]}
            tag="button"
          >
            Select
          </Button>
        </div>
      </Card>
    </Popover>
  </div>
  Some error
</FormGroup>
`;
